--- a/SpriteEditor/SpriteEditor.vcxproj.filters
+++ b/SpriteEditor/SpriteEditor.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FirstPersonEngine.cpp">
+    <ClCompile Include="SpriteEditor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
